# OpenMeshCraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Doxyfile  LICENSE  README.md
examples/: CMakeLists.txt
examples/src/: MeshBoolean.cpp  example_utils.h  main.cpp
src/: CMakeLists.txt
src/OpenMeshCraft/: CMakeLists.txt
src/OpenMeshCraft/Arrangements/: AuxStructure.h  AuxStructure.inl  ClassifyIntersections.h  ClassifyIntersections.inl  CleanMesh.h  CleanMesh.inl  ConnectIntersections.h  ConnectIntersections.inl  DetectBBI.h  DetectBBI.inl  DetectClassifyIntersections.h  DetectClassifyIntersections.inl  DetectClassifyTTI.h  DetectClassifyTTI.inl  DetectClassifyTTIs.h  DetectClassifyTTIs.inl  DetectIntersections.h  DetectIntersections.inl  FastTriMesh.h  FastTriMesh.inl  MeshArrangements.cpp  MeshArrangements.h  MeshArrangements.inl  Tree.h  Tree.inl  TriangleSoup.h  TriangleSoup.inl  Triangulation.h  Triangulation.inl  Utils.h
src/OpenMeshCraft/Boolean/: MeshBoolean.cpp  MeshBoolean.h  MeshBoolean.inl
src/OpenMeshCraft/Geometry/: ApproxPredicatesApproxConstructions.h  ExactIndirectPredicatesApproxConstructions.h  Utils.h
src/OpenMeshCraft/Geometry/AABB/: AABBNode.h  AABBTraits.h  AABBTraversalTraits.h  AABBTraversalTraits.inl  AABBTree.h  AABBTree.inl  AABBTree_Triangle.h  AABBTree_Triangle_Intersection.h  AABBTree_Triangle_NearestSearch.h
src/OpenMeshCraft/Geometry/AdaptiveOrthTree/: AdapOcTree.h  AdapOcTree.inl  AdapOrthNode.h  AdapOrthTraits.h  AdapOrthTraversalTraits.h  AdapOrthTree.h  AdapOrthTree.inl
src/OpenMeshCraft/Geometry/BinaryTree/: BinaryNode.h  BinarySplitManner.h  BinaryTraits.h  BinaryTraversalTraits.h  BinaryTree.h  BinaryTree.inl
src/OpenMeshCraft/Geometry/Constructions/: CalcBoundingBox3K.h  FastProjectPoint3K.h  FastProjectPoint3K.inl  Normal3.h  PointBound.h  ProjectPoint3K.h  ProjectPoint3K.inl
src/OpenMeshCraft/Geometry/Intersection/: Bbox3_BoundedLine3.h  Bbox3_Line3.h  Bbox3_Ray3.h  Bbox3_Segment3.h  Bbox3_Triangle3.h  Bbox3_Triangle3.inl  Bbox_Bbox.h  Bbox_Point.h  Bbox_Sphere.h  DoIntersectK.h  IntersectionUtils.cpp  IntersectionUtils.h  Segment2_Segment2.h  Segment2_Segment2.inl  Segment3_Point3.h  Segment3_Point3.inl  Segment3_Segment3.h  Segment3_Segment3.inl  Tetrahedron3_Point3.h  Tetrahedron3_Point3.inl  Tetrahedron3_Segment3.h  Tetrahedron3_Segment3.inl  Tetrahedron3_Triangle3.h  Tetrahedron3_Triangle3.inl  Triangle2_Point2.h  Triangle2_Point2.inl  Triangle3_Point3.h  Triangle3_Point3.inl  Triangle3_Segment3.h  Triangle3_Segment3.inl  Triangle3_Triangle3.h  Triangle3_Triangle3.inl
src/OpenMeshCraft/Geometry/KdTree/: KdNode.h  KdPointContainer.h  KdPointContainer.inl  KdTraits.h  KdTraversal.h  KdTraversal.inl  KdTree.h  KdTree.inl
src/OpenMeshCraft/Geometry/OrthogonalTree/: OcTree.h  OcTree.inl  OrthogonalNode.h  OrthogonalTraits.h  OrthogonalTraversalTraits.h  OrthogonalTree.h  OrthogonalTree.inl  OrthogonalVertex.h
src/OpenMeshCraft/Geometry/Predicates/: CheckDegenerate3K.h  CheckDegenerate3K.inl  GeneralPredicates.h  GeneralPredicates.inl  ImplicitPointPredicates.h  ImplicitPointPredicates.inl  IndirectDefinitions.cpp  IndirectDefinitions.h  IndirectPredicateDetails.h  IndirectPredicateDetails.inl  IndirectPredicateDetailsHand.h  IndirectPredicateDetailsHand.inl  IndirectPredicates.h  IndirectPredicates.inl
src/OpenMeshCraft/Geometry/Primitives/: BoundedLine3T.h  BoundingBox2T.h  BoundingBox2T.inl  BoundingBox3T.h  BoundingBox3T.inl  ExplicitPoint2T.h  ExplicitPoint3T.h  GenericPoint2T.h  GenericPoint3T.h  GlobalCachedValues.h  ImplicitPlane3T.h  ImplicitPoint2T.h  ImplicitPoint2T.inl  ImplicitPoint3T.h  ImplicitPoint3T_LNC.inl  ImplicitPoint3T_LPI.inl  ImplicitPoint3T_SSI.inl  ImplicitPoint3T_TPI.inl  ImplicitPoints.h  Line3T.h  NormalCone3T.h  NormalCone3T.inl  Plane3T.h  Point2T.h  Point3T.h  Points.h  Primitive2.h  Primitive3.h  PrimitiveWithAttribute.h  RangeT.h  Ray3T.h  Segment2T.h  Segment3T.h  Sphere2T.h  Sphere3T.h  Tetrahedron3T.h  Triangle2T.h  Triangle3T.h  Vector2T.h  Vector3T.h  (+2 more)
src/OpenMeshCraft/Mesh/: TriSoup.h
src/OpenMeshCraft/Mesh/IO/: IOInstantiations.cpp  IOOptions.h  OBJReader.h  OBJReader.inl  OBJWriter.h  OBJWriter.inl  STLReader.h  STLReader.inl  STLWriter.h  STLWriter.inl
src/OpenMeshCraft/NumberTypes/: BigNumbers.h  BoostMultiprecision.cpp  BoostMultiprecision.h  ExpansionObject.h  ExpansionObject.inl  FPU.h  IntervalNumber.h  LazyNumber.h  Multiprecision.h  Multiprecision.inl  NumberTypesDecl.h  NumberUtils.h
src/OpenMeshCraft/Utils/: CStyleVector.h  ContainerOp.h  DisableWarnings.h  EnableWarnings.h  Exception.h  ExtendedTypeTraits.h  Hashers.h  IndexDef.h  IndexHeap.h  InlinedVector.h  IotaView.h  Label.h  Logger.cpp  Logger.h  Macros.h  SFINAE.h  StringUtils.cpp  StringUtils.h
src/PredicatesGenerator/: CMakeLists.txt  main.cpp  update_source_code.bat
src/PredicatesGenerator/IndirectPredicates/: converter.cpp  converter.h  update_source_code.bat
src/PredicatesGenerator/IndirectPredicates/direct/: dotProductSign2D4P.txt  inSphere.txt  (+3 more)
src/PredicatesGenerator/MatlabScripts/: OFFSET_LPI.m  OFFSET_SSI.m  OFFSET_TPI.m  SSI3.m  test_OFFSET_LPI.py  test_OFFSET_SSI.py  test_OFFSET_TPI.py
src/PredicatesGenerator/OffsetPredicates/: converter.cpp  converter.h  main.cpp  update_source_code.bat
test/: CMakeLists.txt  README.md  arrangements.cpp  paper_arrangements.cpp  test_config.json  test_main.cpp  test_utils.h
test/Arrangements/: test_arrangements.cpp
test/Boolean/: test_boolean.cpp
test/Executables/: arrangements.cpp
test/Geometry/: AreVecsEqual.h  test_AABBTreeIntersection.cpp  test_AABBTreeNearestSearch.cpp  test_AdapOrthTree.cpp  test_BinaryTree.cpp  test_Degeneration3.cpp  test_ExactIndirectPredicates.cpp  test_FastProjectPoint.cpp  test_Intersection_Box3.cpp  test_Intersection_Ray3.cpp  test_Intersection_Segment3.cpp  test_Intersection_Tetrahedron3.cpp  test_Intersection_Triangle3.cpp  test_OrthogonalTree.cpp  test_ProjectPoint.cpp
test/NumberTypes/: test_IntervalNumber.cpp  test_LazyExactNumber.cpp
test/Utils/: test_IndexHeap.cpp
(+158 files in other folders)
